[package]
name = "vesting-program"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "1.18.14"

thiserror = "1.0"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.3.0", features = ["no-entrypoint"] }
borsh = {version ="1.5.7", features = ["derive"]}

[features]
no-entrypoint = []

